# mentalist

./: .gitignore  Bugs.md  Cargo.toml  README.md  fixes.txt  lint_failures.md  re-spec.md  security_audit_failure.md
.github/workflows/: ci.yml
benches/: bench_main.rs
docs/: API.md  ARCHITECTURE.md  EXECUTOR_MODES.md  MCP_GUIDE.md  PERFORMANCE.md  SECURITY.md  futures.md  middleware_guide.md
examples/: custom_middleware.rs  full_system_demo.rs  python_wasm_demo.rs
src/: agent.rs  config.rs  error.rs  executor.rs  lib.rs  mcp.rs  provider.rs  skills.rs
src/cognition/: mod.rs
src/config/: mod.rs
src/core/: mod.rs  runtime.rs  state.rs
src/execution/: executor.rs  graph.rs  mod.rs
src/llm/: mod.rs  provider.rs
src/memory/: mod.rs
src/middleware/: mod.rs  todo.rs
src/resources/: tool_runner.wasm
src/security/: mod.rs
src/telemetry/: mod.rs
src/tools/: mcp_adapter.rs  memory.rs  mod.rs  registry.rs  skills.rs
tests/: agent_tests.rs  config_tests.rs  error_tests.rs  executor_tests.rs  harness_tests.rs  memory_integration_test.rs  ollama_real_test.rs
wasm_tools/: Cargo.toml  wasm_tools.wasm
wasm_tools/src/: main.rs
