[package]
name = "mentalist"
version = "0.3.2"
edition = "2021"
authors = ["MindPalace Authors"]
license = "MIT"
rust-version = "1.70"

[features]
default = []
wasm-tools = []

[dependencies]
mem-core = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
brain = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-resilience = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-extractor = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-retriever = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-bridge = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-offloader = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-micro = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-personality = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-session = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-compactor = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }
mem-dreamer = { git = "https://github.com/whiterabb17/mindpalace.git", version = "0.2.2" }

tokio = { version = "1.40", features = ["rt", "fs", "sync", "macros"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1.0.86"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
async-recursion = "1"
chrono = "0.4"
bollard = "0.20"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
async-stream = "0.3"
wasmtime = { version = "36.0.6", features = ["async"] }
wasmtime-wasi = { version = "36.0.6", features = ["preview1"] }
ruvector-core = "2.1"
ruvector-graph = "2.0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
brain = { git = "https://github.com/whiterabb17/mindpalace.git" }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tracing-subscriber = "0.3"

[[bench]]
name = "bench_main"
harness = false

# NOTE: Enabled for local development during hardening
#[patch."https://github.com/whiterabb17/mindpalace.git"]
#mem-core = { path = "../mindpalace/crates/mem-core", version = "0.2.2" }
#brain = { path = "../mindpalace/crates/brain", version = "0.2.2" }
#mem-resilience = { path = "../mindpalace/crates/mem-resilience", version = "0.2.2" }
#mem-extractor = { path = "../mindpalace/crates/mem-extractor", version = "0.2.2" }
#mem-retriever = { path = "../mindpalace/crates/mem-retriever", version = "0.2.2" }
#mem-bridge = { path = "../mindpalace/crates/mem-bridge", version = "0.2.2" }
#mem-offloader = { path = "../mindpalace/crates/mem-offloader", version = "0.2.2" }
#mem-micro = { path = "../mindpalace/crates/mem-micro", version = "0.2.2" }
#mem-personality = { path = "../mindpalace/crates/mem-personality", version = "0.2.2" }
#mem-session = { path = "../mindpalace/crates/mem-session", version = "0.2.2" }
#mem-compactor = { path = "../mindpalace/crates/mem-compactor", version = "0.2.2" }
#mem-dreamer = { path = "../mindpalace/crates/mem-dreamer", version = "0.2.2" }
